UIP-2706 fixed mark up being cut off

--- a/packages/ui-library/src/demo/css/layout.scss
+++ b/packages/ui-library/src/demo/css/layout.scss
@@ -85,6 +85,7 @@ $sidenav-lineheight: 22px;
     }
     .markup-wrapper {
         overflow: hidden;
+        padding-top: $spacing-lg;
     }
     .inner-markup-wrapper {
         overflow-x: auto;
